<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:background="@color/colorPrimary"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
       android:weightSum="1"

        android:orientation="horizontal"

        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="0dp"
            android:layout_weight="0.25"
            android:padding="5dp"
            android:id="@+id/setting_profile"
            android:layout_gravity="center"
            android:background="@drawable/background_text_gray"
            android:src="@drawable/ic_settings_black_24dp"
            android:layout_height="45dp" />


        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_height="200dp"
            android:src="@drawable/profile_img"
            app:civ_border_width="2dp" />

        <ImageView
            android:layout_width="0dp"
            android:layout_weight="0.25"
            android:layout_gravity="center"
            android:padding="5dp"
            android:id="@+id/edit_profile"
            android:background="@drawable/background_text_gray"
            android:src="@drawable/ic_edit_black_24dp"
            android:layout_height="45dp" />
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:text="@string/myOrder"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        android:textSize="@dimen/catogry_size_second"
        android:layout_marginStart="20dp"
        android:background="@drawable/background_button_gray"
        android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:text="@string/information"
        android:textColor="@color/black"
        android:padding="5dp"
        android:background="@color/white_gray"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:hint="@string/phone_number"
        android:id="@+id/phone_profile"
        android:padding="10dp"
        android:layout_height="wrap_content" />
    <View
        android:layout_width="match_parent"
        android:background="@color/black"
        android:layout_height="1dp"/>

    <TextView
        android:layout_width="match_parent"
        android:hint="@string/first_name_profile"
        android:id="@+id/firstname_profile"
        android:padding="10dp"
        android:layout_height="wrap_content" />
    <View
        android:layout_width="match_parent"
        android:background="@color/black"
        android:layout_height="1dp"/>

    <TextView
        android:layout_width="match_parent"
        android:hint="@string/last_name_profile"
        android:id="@+id/lastname_profile"
        android:padding="10dp"
        android:layout_height="wrap_content" />
    <View
        android:layout_width="match_parent"
        android:background="@color/black"
        android:layout_height="1dp"/>

    <TextView
        android:layout_width="match_parent"
        android:hint="@string/address_profile"
        android:id="@+id/address_profile"
        android:padding="10dp"
        android:layout_height="wrap_content" />
    <View
        android:layout_width="match_parent"
        android:background="@color/black"
        android:layout_height="1dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:id="@+id/logout_profile"
        android:paddingEnd="70dp"
        android:paddingStart="70dp"
        android:text="@string/log_out"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:background="@drawable/background_button_red"
        android:layout_height="wrap_content" />

</LinearLayout>
</ScrollView>